removed botnet (uploading saved stories to public google drive)
removed useless profanity filter