@@ -17,7 +17,8 @@ topkeks = 20
 top_p = 0.9
 #probably related to the number of words the AI produces at a time? Possibly affects performance.
 generatenum = 60
-#controls something related to tensorflows logging
+#Tensorflow log leve
+#	seems to give informative messages about what options your CPU and tensorflow install supports. Not sure what a good default should be.
 loglevel = 3
 
 #ECMA-48 set graphics codes
@@ -57,14 +58,14 @@ loglevel = 3
 [Colors]
 default = 0
 error = 7
-loadingMessage = 34
+loadingMessage = 7;34
 title = 31
 subtitle = 36
 instructions = 33
 selectionPrompt = 7;32
 selectionValue = 35
 menu = 36
-AIText = 35
-mainPrompt = 7;33;45
+AIText = 37
+mainPrompt = 34
 userText = 36
 printStory = 37
