@@ -1,0 +1,4 @@
+I hope no one took the shitposters baits, although I noticed some of you did do last thread.
+Anons, this is serious, if you can’t even tell apart a shitposter from a serious one, how do you even expect to be able to setup this game? I wrote the guide to help you out but I can only go so far.
+Even worse, how do you plan to be able to TRAIN YOUR OWN AI WAIFU when we polish this a little more? 
+Anon, are you going to lose that opportunity? Or rise up, learn to think for yourself, and claim your waifu forever? The choice is yours.
